--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,3 +12,194 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.h-full{
+  height: 100vh;
+}
+
+
+.login-bg{
+  background-image: url('../src/assets/img/login-bg.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position-y: bottom;
+}
+.register-bg{
+  background-image: url('../src/assets/img/register-bg.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.right-container{
+  display: flex;
+  align-items: center;
+  height: 100vh;
+}
+.login-container{
+  background-color: #ffffffee;
+  box-shadow: 0px 0px 20px rgba(105, 105, 105, 0.2);
+  height: auto;
+  margin: 10px;
+  padding: 30px;
+  border-radius: 5px;
+}
+.pad-xs{
+  padding: 5px;
+}
+.pad-sm{
+  padding: 10px;
+}
+.pad-md{
+  padding: 15px;
+}
+.pad-lg{
+  padding: 20px;
+}
+.mar-r-xs{
+  margin-right: 5px;
+}
+.mar-r-sm{
+  margin-right: 10px;
+}
+.mar-r-md{
+  margin-right: 15px;
+}
+.mar-r-lg{
+  margin-right: 20px;
+}
+/* label underline focus color */
+#root .input-field input[type="text"]:focus, #root .input-field input[type="email"]:focus, #root .input-field input[type="password"]:focus {
+  border-bottom: 1px solid #3b5998;
+  box-shadow: 0 1px 0 0 #3b5998;
+}
+#root .social-container button:hover {
+  background-color: #3b5998;
+}
+#root .input-field label.active{
+  color: #3b5998;
+}
+.social-container{
+  display: flex;
+  justify-content: space-around;
+}
+.google-bg{
+  background-color: #dd4b39;
+}
+.facebook-bg{
+  background-color: #3b5998;
+}
+.linkedin-bg{
+background-color: #007bb6;
+}
+
+[type="radio"]:checked+span, [type="radio"]:not(:checked)+span {
+  padding-left: 25px;
+}
+
+[type="radio"]:checked+span:after{
+  background-color: #3b5998;
+  border-color: #3b5998;
+}
+.input-field{
+  margin-bottom: 0;
+}
+#dashboard{
+  display: flex;
+  flex-direction: column;
+}
+
+.topbar{
+  width: 100%;
+  background-color: #3b5998;
+  padding: 10px 15px;
+  height: 50px;
+  max-height: 60px;
+}
+.content {
+  height: calc(100vh - 50px);
+  display: flex;
+  flex-direction: row;
+}
+.left-nav{
+  width: 220px;
+  height: 100%;
+  background-color: #f1f1f1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.dashboard-content{
+  width: 100%;
+  height: 100%;
+  background-color: #f9f9f9;
+}
+.sidenav-items li a {
+  padding: 10px;
+  color:black;
+  display: block;
+  display: flex;
+  align-items: center;
+}
+.sidenav-items li {
+  margin-left: 10px;
+  border-radius: 10px 0 0 10px;
+  position: relative;
+}
+.sidenav-items li a i{
+  margin-right: 5px;
+}
+
+ .sidenav-items li.active{
+  background: #f9f9f9; 
+}
+.sidenav-items li.active a i{
+  color: #3b5998
+}
+
+.sidenav-items li.active:after, .sidenav-items li.active:before{
+  content:'';
+  position: absolute;
+  width: 10px; 
+  height: 10px;
+  right: 0px;
+}
+
+.sidenav-items li.active:after{
+  top: -10px;
+  background: radial-gradient(circle at top left, #f1f1f1 10px, #f9f9f9 11px);
+}
+
+.sidenav-items li.active:before{
+  bottom: -10px;
+  background: radial-gradient(circle at bottom left, #f1f1f1 10px, #f9f9f9 11px);
+}
+
+/*** Profile page ***/
+.user-image-container{
+  display: flex;
+  justify-content: center;
+  padding-bottom: 20px;
+}
+.user-image {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  overflow: hidden;
+  position: relative;
+}
+.user-image img{
+  width: 100%;
+}
+.edit-photo-container{
+  position: absolute;
+  width: 100%;
+  background-color: rgba(0,0,0,0.8);
+  bottom: -100%;
+  text-align: center;
+  color:#fff;
+  padding: 5px 0 20px 0;
+  transition: all linear 0.1s;
+}
+
+.user-image:hover .edit-photo-container{
+  bottom: 0;
+}
