--- a/client/src/index.css
+++ b/client/src/index.css
@@ -203,3 +203,8 @@ background-color: #007bb6;
 .user-image:hover .edit-photo-container{
   bottom: 0;
 }
+.label-profile{
+  font-size: 12px;
+  color:rgb(139, 139, 139);
+
+}
