--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -44,13 +44,17 @@ code {
   border-radius: 5px;
   position: relative;
 }
-#register-form .input-style, #login-form .input-style{
+#register-form .input-field{
+  margin-top: 2px;
+}
+#register-form .input-style, #login-form .input-style, #profile-form .input-style{
   background-color: #fff;
   padding:0 10px;
   box-shadow: 0px 0px 8px rgb(224, 224, 224);
   border: none;
   border-radius: 5px;
   box-sizing: border-box;
+  margin-top: 5px;
 }
 .pad-xs{
   padding: 5px;
@@ -145,7 +149,7 @@ background-color: #007bb6;
 .dashboard-content{
   width: 100%;
   height: 100%;
-  background-color: #f9f9f9;
+  background-color: #ffffff;
   overflow: auto;
 }
 .sidenav-items li a {
@@ -165,7 +169,7 @@ background-color: #007bb6;
 }
 
  .sidenav-items li.active{
-  background: #f9f9f9; 
+  background: #FFF; 
 }
 .sidenav-items li.active a i{
   color: #577fd4
@@ -190,6 +194,13 @@ background-color: #007bb6;
 }
 
 /*** Profile page ***/
+
+#profile-form .form-box{
+  background-color: #fff;
+    padding: 15px 15px 30px 15px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 20px #94949436;
+}
 .user-image-container{
   display: flex;
   justify-content: center;
@@ -198,7 +209,7 @@ background-color: #007bb6;
 .user-image {
   width: 150px;
   height: 150px;
-  border-radius: 50%;
+  border-radius: 5px;
   overflow: hidden;
   position: relative;
 }
@@ -222,7 +233,6 @@ background-color: #007bb6;
 .label-profile{
   font-size: 12px;
   color:rgb(139, 139, 139);
-
 }
 
 @media (max-width:768px) {
